--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,46 @@
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+# OS
+.DS_Store
+.Trashes
+*.swp
+*.lock
 
-## Build generated
+*.mode1v3
+*.mode2v3
+*.moved-aside
+*.pbxuser
+*.perspectivev3
+
+# Xcode
 .build/
 build/
-DerivedData
-
-## Various settings
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
+DerivedData/
 xcuserdata
-
-## Other
-.DS_Store
 *.xccheckout
-*.moved-aside
-*.xcuserstate
-*.xcscmblueprint
 
-## Obj-C/Swift specific
+*.mode1v3
+*.mode2v3
+*.moved-aside
+*.pbxuser
+*.perspectivev3
+
+# Carthage
+Carthage/Build
+
+# CocoaPods
+Pods/
+
+# Third party tools
+.idea/
+FauxPasConfig/
+
+# Objective-C / Swift
 *.hmap
 *.ipa
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-Pods/
-
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build
+# Exceptions
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
+!Podfile.lock
+!Pods/Manifest.lock
